fix diagonal gaps

--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ body {
 .about .slant-top {
   background-color: #fff;
   border: 0 solid #0F2C34;
-  height: 60px;
+  height: 80px;
   position: absolute;
   width: 105%;
 }
@@ -156,7 +156,7 @@ body {
 .info .slant-bottom,
 .info .slant-top {
   background-color: #fff;
-  height: 60px;
+  height: 80px;
   position: absolute;
   width: 105%;
 }
@@ -213,7 +213,7 @@ body {
 
 .faq .slant-top {
   background-color: #FF7FA8;
-  height: 60px;
+  height: 80px;
   position: absolute;
   top: -40px;
   transform: rotate(-2deg);
